# Cross-modal_Patch_Attack

./: .gitignore  DE.py  explore_xml_annos.py  pyproject.toml  spline_DE_attack.py  yolov3_inference.py
attack_utils/: multi_angles_transform_inf.py  multi_angles_transform_vis.py
utils/: draw_utils.py  llvip_xml_to_coco.py
yolov3/: detect.py  detect_infrared.py  detect_visible.py
yolov3/data/: llvip_coco.yaml
yolov3/models/: experimental.py
