[project]
name = "cross-modal-patch-attack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cmake>=4.0.2",
    "cycler>=0.12.1",
    "cython>=3.1.1",
    "imageio>=2.37.0",
    "importlib-metadata>=8.7.0",
    "joblib>=1.5.1",
    "matplotlib>=3.2.2",
    "numpy>=1.18.5",
    "opencv-python>=4.1.2",
    "pandas>=1.1.4",
    "pillow>=7.1.2",
    "pycocotools>=2.0.10",
    "pyparsing>=3.2.3",
    "pyyaml>=5.3.1",
    "requests>=2.23.0",
    "scikit-image>=0.25.2",
    "scipy>=1.4.1",
    "seaborn>=0.11.0",
    "tensorboard>=2.4.1",
    "thop>=0.1.1.post2209072238",
    "torch>=1.7.0",
    "torchvision>=0.8.1",
    "tqdm>=4.41.0",
    "wandb>=0.19.11",
]
